# otelmini

./: CLAUDE.md  README.md  SPEC_COMPLIANCE.md  SPEC_CONFORMANCE.md  pyproject.toml
.github/workflows/: test.yml
examples/: _lib.py  example_trace.py  fun.py  lib.py  ott_auto_console_exporters.py  ott_auto_logs.py  ott_auto_metrics.py  ott_auto_trace.py  ott_explicit_shutdown.py  ott_histogram.py  ott_implicit_shutdown.py  ott_manual_logs.py  ott_manual_trace.py  ott_manual_trace_grpc.py  ott_manual_trace_http.py  ott_metric_manual_flush.py  ott_metric_multiple_types.py  ott_metric_periodic_export.py  ott_metrics.py  ott_multiprocess.py  ott_observable_gauge.py  ott_send_spans_manual.py  ott_trace.py  ott_trace_batch_interval.py  ott_trace_batch_size.py  ott_trace_manual_grpc.py  ott_up_down_counter.py
examples/compare/: common.py  ott_metrics_otelpython.py  ott_requests_auto_otelmini.py  ott_requests_auto_otelpython.py  ott_requests_otelmini.py  ott_span_otelmini.py  ott_span_otelpython.py
examples/lambda-comparison/: run-comparison.sh  template.yaml
examples/lambda-comparison/otelmini/: app.py  requirements.txt
examples/lambda-comparison/otelpython/: app.py  requirements.txt
src/otelmini/: __about__.py  _grpclib.py  _lib.py  _tracelib.py  common_encode.py  distro.py  encode.py  env.py  export.py  exporter.py  grpc.py  log.py  metric.py  metrics_encode.py  pb.py  point.py  processor.py  propagator.py  proto.py  resource.py  sampler.py  trace.py  types.py
src/otelmini/auto/: __init__.py  _lib.py  sitecustomize.py
src/otelmini/fork/: procfun.py  remote.py
tests/: _lib.py  funwithreads.py  test_auto.py  test_env.py  test_grpc.py  test_log.py  test_logging.py  test_metric.py  test_processor.py  test_propagator.py  test_resource.py  test_sampler.py  test_trace.py
tests/oteltest/: _lib.py  ott_auto_trace.py  ott_log_batch_interval.py  ott_log_batch_size.py  ott_manual_logs.py  ott_metric_observables.py  ott_metrics.py  ott_observable_gauge.py
tests/oteltest/compare/: ott_metrics_otelmini.py  ott_requests_auto_otelmini.py  ott_requests_otelpython.py  ott_span_otelpython.py
